// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Yubikey OTP transformer Tests Yubikey OTP Enroll tests should add correct title, image, description, passcode input, and Set up button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "SVGIcon": [Function],
          "alignment": "center",
          "id": "yubikey",
        },
        "type": "ImageWithText",
      },
      {
        "options": {
          "content": "oie.yubikey.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.yubikey.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "off",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.enroll.authenticator.button.text",
        "options": {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Yubikey OTP transformer Tests Yubikey OTP Verify tests should add correct title, description, passcode input, and Verify button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.yubikey.challenge.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.yubikey.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "off",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
